# labyrinth

./: .rustfmt.toml  Cargo.toml  README.md
examples/: cli.rs
src/: base.rs  direction.rs  growing_tree.rs  lib.rs  maze.rs
